# ai_image_analyzer

./: .gitignore
analyzer_frontend/: README.md  pubspec.yaml
analyzer_frontend/android/app/: build.gradle.kts
analyzer_frontend/android/app/src/main/: AndroidManifest.xml
analyzer_frontend/android/app/src/main/kotlin/com/example/analyzer_frontend/: MainActivity.kt
analyzer_frontend/ios/Runner/: Info.plist
analyzer_frontend/ios/Runner.xcodeproj/: project.pbxproj
analyzer_frontend/lib/: main.dart
analyzer_frontend/lib/features/analyzer/cubits/: analyzer_cubit.dart  analyzer_state.dart
analyzer_frontend/lib/features/analyzer/models/: analysis_result.dart  label.dart  preview_model.dart
analyzer_frontend/lib/features/analyzer/services/: analyzer.dart  mock_analyzer.dart
analyzer_frontend/lib/features/analyzer/views/: home_view.dart  preview.dart  results_view.dart  upload_view.dart
analyzer_frontend/linux/: CMakeLists.txt
analyzer_frontend/linux/runner/: my_application.cc
analyzer_frontend/macos/Runner.xcodeproj/: project.pbxproj
analyzer_frontend/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
analyzer_frontend/macos/Runner/Configs/: AppInfo.xcconfig
analyzer_frontend/web/: index.html  manifest.json
analyzer_frontend/windows/: CMakeLists.txt
analyzer_frontend/windows/runner/: Runner.rc  main.cpp
anlyzer_backend/: main.py  pyproject.toml
backend/: pyproject.toml
backend/app/: main.py
backend/app/core/: settings.py
